[package]
name = "starsgit"
version = "0.1.0"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = {version="0.13", default-features = false}
pico-args = "0.4"
askama = "0.10"
pulldown-cmark = "0.8"
tide = "0.16"
syntect = {version="4.5", default-features = false, features=["html", "regex-onig"]}
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.7.2"
toml = "0.5.8"
