[package]
name = "mygit-inbox"
version = "0.1.0"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = {version = "0.10", features = ["with-tide"]}
askama_tide = "0.13"
tide = "0.16"
email-parser = "0.5.0"
# TODO make optional
imap = "2.4"
